--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 </div>
                 <input type="submit" value="ingresar" class="btn btn-success btn-block">
             </form>
+            <div id="link" class="mt-2">
+            <a href="registro.html">Registro</a>
+            </div>
         </div>
     </div>
 </body>
