--- a/inicio.html
+++ b/inicio.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Bienvenidos a mi Aplicacion</h1>
+    <div class="container mt-5">
+        <div class="jumbotron">
+            <h1>Bienvenidos a mi Aplicacion</h1>
+        </div>
+    </div>
 </body>
 </html>
