--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=
-    , initial-scale=1.0">
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -12,7 +11,8 @@
 <body>
     <div class="container mt-5">
         <div id="login">
-            <form action="">
+            <div id="mensaje"></div>
+            <form id="formLogin">
                 <div class="form-group">
                     <label for="user">Usuario</label>
                     <input type="text" id="user" class="form-control">
@@ -28,6 +28,7 @@
             </div>
         </div>
     </div>
+    <script src="js/utilidades.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
